# annotated-tree

./: .annotation  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_APPENDIX.md  RELEASING.md  ROADMAP.md  default_config.toml  demo.sh
.githooks/: commit-msg  pre-commit
.github/workflows/: ci.yml  release.yml
docs/: annotation-guide.md  communication-style.md  convention.md  githook-guide.md  repo-standards.md
installer/: install.sh
npm/: .gitignore  PACKAGING.md  README.md  package.json
npm/scripts/: build-npm.mjs
sample/: README.md
sample/cmd/tool/: go.mod  main.go
sample/db/: schema.sql
sample/frontend/ui/: package.json
sample/frontend/ui/src/: index.ts
sample/frontend/web/: package.json
sample/frontend/web/src/: App.tsx  Button.vue  Widget.svelte  index.ts
sample/scripts/: deploy.sh
sample/services/gateway/: Cargo.toml
sample/services/gateway/src/: lib.rs  main.rs
sample/services/shared/src/: lib.rs
scripts/: bootstrap-npm.sh  local-release-check.sh
src/: annotation.rs  changed.rs  charter.rs  cli.rs  config.rs  exit.rs  githook.rs  graph.rs  guide.rs  lib.rs  main.rs  manifest.rs  mcp.rs  model.rs  rules.rs  strict.rs  strict_schema.txt  tokens.rs  util.rs  walk.rs
src/render/: json.rs  json_schema.txt  md.rs  mod.rs  text.rs
src/symbols/: engine.rs  go.rs  mod.rs  python.rs  rust.rs  typescript.rs
src/symbols/queries/: go.scm  python.scm  rust.scm  typescript.scm
tests/: age.rs  changed.rs  charter.rs  config_precedence.rs  config_scoping.rs  cross_build.rs  exit_codes.rs  filters.rs  golden.rs  lib_api.rs  limits.rs  mcp.rs  orphan_annotation.rs  per_node.rs  rules.rs  unresolved_deps.rs  warnings.rs
tests/fixtures/charter/grouping/: .annotation  widget_a.py  widget_b.py
tests/fixtures/charter/overridden/: .annotation  __init__.py
tests/fixtures/charter_malformed/bad/: .annotation  thing.py
tests/fixtures/charter_rule/: .annotated-tree.toml
tests/fixtures/cycle/: .annotated-tree.toml
tests/fixtures/orphan_root_charter/: Cargo.toml
tests/fixtures/orphan_root_charter/src/: lib.rs
tests/fixtures/rules/: .annotated-tree.toml
tests/fixtures/symbols/: app.py  lib.rs  server.go  widget.ts
tests/golden/: default.txt  depth1.txt  strict_check.txt  symbols.txt
